[gd_scene load_steps=3 format=3 uid="uid://bjayteqm6h7di"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_201h7"]
[ext_resource type="AudioStream" uid="uid://oylan4l05vle" path="res://assets/sounds/hurt.wav" id="2_ax0u0"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_201h7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DeadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ax0u0")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
